--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pdfjs-dist": "5.4.296",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-pdf": "7.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
